[Feat/#8] tuning_model&weatherAPI